--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+
 /* Start Variables */
 :root{
     --main-color:#10cab7;
@@ -18,17 +19,20 @@
 html{
     scroll-behavior: smooth;
 }
-
 .parent{
     background-color: #eee;
 }
-
+@media (max-width: 767px) {
+    body .main-container {
+        width: fit-content;
+    } 
+}
 .container{
     padding-left: 13px;
     padding-right: 13px;
     margin-left: auto;
     margin-right: auto;
-} 
+}
 
 
 /* Small */
@@ -38,7 +42,6 @@ html{
     }
 }
 
-
 /* Medium */
 @media (min-width: 992px){
     .container{
@@ -46,13 +49,11 @@ html{
     }
 }
 
-
 /* Larg */
 @media (min-width: 1200px){
     .container{
         width: 1170px;
     }
-    
 }
 /* End Global Rules */
 
@@ -114,26 +115,22 @@ html{
     border-bottom: 1px solid rgb(70, 153, 255);
     width: 70px;
 }
-
 .header .container a span{
     font-size: 30px;
     color: var(--main-color);
     font-weight: bold;
     font-family: sans-serif;
 }
-
 .header .container .links-2{
     list-style: none;
     left: 10px;
     margin: 0px;
 }
-
 .header .container .links-2 li{
     display: inline-block;
     padding: inherit;
     text-align: center;
 }
-
 .header .container .links-2 a{
     display: block;
     text-decoration: none;
@@ -149,15 +146,11 @@ html{
         display: none;
     }
 }
-
-
-
 .header .links{
     position: relative;
     display: none;
     padding: 6px;
 }
-
 @media(max-width: 768px){
     .header .links{
         display: block;
@@ -178,25 +171,19 @@ html{
     height: 3px;
     width: 30px;
 }
-
 .header .links .icons span:first-child{
     width: 100%;
 }
-
 .header .links .icons span:nth-child(2){ 
    width: 60%;
    transition: var(--main-duration);
 }
-
 .header .links .icons span:last-child{
     width: 100%;
 }
-
 .header .links:hover .icons span:nth-child(2) {
     width: 100%;
 }
-
-
 .header .links ul {
     list-style: none;
     margin: 0px;
@@ -209,7 +196,6 @@ html{
     display: none;
     z-index: 5;
 }
-
 .header .links ul::after{
     content: "";
     border-width: 15px;
@@ -219,11 +205,9 @@ html{
     right: 5px;
     top: -28px;
 }
-
 .header .links:hover ul{
     display: block;
 }
-
 .header .links ul a{
     display: block;
     padding: 15px;
@@ -231,11 +215,9 @@ html{
     color: #333;
     transition: var(--main-duration);
 }
-
 .header .links ul a:hover{
     padding-left: 25px;
 }
-
 .header .links ul li:not(:last-child) a{
     border-bottom: 1px solid #ddd;
 }
@@ -247,7 +229,7 @@ html{
     background-repeat: no-repeat;
     background-size: cover;
     background-color: rgb(88, 88, 88);
-    height: 92vh;
+    height: 97vh;
     width: 100%;
     position: relative;
 }
@@ -260,7 +242,6 @@ html{
     height: 100%;
     background-color: rgb(0 0 0 / 30%);
 }
-
 .Landing .container{
     position:absolute;
     top: 38%;
@@ -272,7 +253,6 @@ html{
     display: grid;
     grid-template-columns:repeat(auto-fill, minmax(200px, 0.31fr));
 }
-
 @media(max-width: 768px){
     .Landing .container{
         display: flex;
@@ -283,8 +263,6 @@ html{
         left: 41%;
     }
 }
-
-
 .Landing .container img{
     width: 190px;
     height: 190px;
@@ -292,12 +270,10 @@ html{
     padding: 4px;
     border: 2px solid white;
 }
-
 .Landing .container .intro-text{
     color: white;
     font-family: sans-serif;
 }
-
 .Landing .container .intro-text h2{
     width: max-content;
     font-weight: bold;
@@ -305,7 +281,6 @@ html{
     color: var(--main-color);
     margin: 78px 0px 25px 33px;
 }
-
 .Landing .container .intro-text p{
     margin-left: 25%;
     width: max-content;
@@ -325,7 +300,6 @@ html{
     .portfolio {
         background-color: #4f4f4f;
     }
-
 }
 .portfolio .portfolio-content {
     display: grid;
@@ -351,7 +325,6 @@ html{
 }
 .portfolio .portfolio-content .card .info {
     padding: 20px;
-
 }
 .portfolio .portfolio-content .card .info h3 {
     margin: 0;
@@ -429,7 +402,6 @@ html{
     .about {
         background-color: var(--section-background);
     }
-
 }
 .about .about-content{
     margin-top: 100px;
@@ -443,7 +415,6 @@ html{
         text-align: center;
     }
 }
-
 .about .about-content .image img{
     max-width: 125%;
     height: 400px;
@@ -599,7 +570,7 @@ html{
 }
 /* End Footer */
 
-/* Start button */
+/* Start To Top Button */
 #button {
     width: 41px;
     height: 41px;
@@ -630,4 +601,4 @@ html{
 .fa-up::before {
     content: '\f062';
 }
-/* End button */
+/* End To Top Button */
